# Richer

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  api.yml  crawler.yml  crawler_multi_celery.yml  create_table.sql  docker-compose.yml  genenv.py  mysql.yml  pyproject.toml  rabbitmq.yml  requirements.txt  scheduler.yml  setup.py
.github/: release.yml  some_name_for_configs.yml
.github/workflows/: auto_assign_reviewer.yml  build_image.yml  default_assignee_on_pr_opened.yml  deploy_image.yml  github-actions-demo.yml  greeting.yml  unit_test_on_pr.yml
api/: config.py  main.py
financialdata/: producer.py  scheduler.py  taifex_crawler.py  tpex_crawler.py  twse_crawler.py  worker.py
financialdata/backend/: __init__.py  clients.py  db.py  router.py
financialdata/crawler/: taiwan_futures_daily.py  taiwan_stock_price.py
financialdata/schema/: dataset.py
financialdata/tasks/: task.py  worker.py
gmapdata/: reservation.py  test.py  test_beauty.py
housedata/: config.py  constants.py  crawler.py  create_house.txt  logger.py  producer.py
housedata/bots/: telegram_bot.py
housedata/schema/: __init__.py
housedata/tasks/: task.py  worker.py
llm/: Pipfile  config.py  setup.py
llm/loader/: audio_loader.py
llm/prompt/: message.py
llm/sample/: get_content.py  make_prompt.py
llm/sample/files/: NCCC_TWN_EC.CSV  japanese_audio_message.m4a
sample/: audio_transcripts.py  chain.py  gen_html_prompt.py  get_content.py  inferring_sentiment.py  make_prompt.py  output_parsers.py
scripts/: deploy_image.sh
src/: twse_crawler.py
tests/: test_main.py
(+2 files in other folders)
