[tool.poetry]
name = "richer"
version = "0.1.0"
description = ""
authors = ["birdca <kiancaca@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
