[tool.poetry]
name = "richer"
version = "0.1.0"
description = ""
authors = ["birdca <kiancaca@gmail.com>", "Tim Huang <t8522192@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
pandas = "^1.5.3"
requests = "^2.28.2"
loguru = "^0.6.0"
tqdm = "^4.64.1"
sqlalchemy = "^2.0.4"
pymysql = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
